--- a/frontend/ui/style/message.css
+++ b/frontend/ui/style/message.css
@@ -45,12 +45,14 @@
     margin-left: 10px;
     margin-right: 10px;
     white-space: pre-wrap;
+    -webkit-user-select: auto;
 }
 
 .username {
     flex-grow: 0;
     flex-shrink: 0;
     margin: 5px;
+    -webkit-user-select: auto;
 }
 
 .username:hover {
@@ -82,12 +84,12 @@
     margin: none;
     display: flex;
     align-items: center;
-
 }
 
 .simpleDate {
     color: var(--unimportant-text-color);
 }
+
 
 .profilePicture>h2 {
     width: 100%;
